# Multithread-Multiplication

./: CMakeLists.txt  Coordinator.cpp  Coordinator.h  Karatsuba.cpp  Karatsuba.h  README.md  Stat.cpp  Stat.h  StatsDAO.cpp  StatsDAO.h  statsDB
src/: Coordinator.cpp  Coordinator.h  DatabaseConnection.cpp  DatabaseConnection.h  Karatsuba.cpp  Karatsuba.h  Stat.h  StatsDAO.h
